MDEV-11842 Fail to insert on a table where a field has no default

has_no_default_value() should only fail the insert in the strict mode.

Additionally, don't check for "all fields are given values" twice,
it'll produce duplicate warnings.